# image-search

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
docs/: report.md
image_search/: data.py  evaluate_model.py  file_cleaning.py  metrics.py  model.py  preprocessing.py  train.py
notebooks/: 1.-download-unsplash-dataset.ipynb  1.-download-unsplash-dataset.py  2.-analysis.ipynb  2.-analysis.py  clean_datasets.py  retrieval.ipynb  retrieval.py
results/: COUNTRY&EMBEDDINGS.csv  FINE-TUNED.csv  VANILLA.csv
tests/: test_metrics.py
