[project]
name = "image-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "datasets>=4.4.2",
    "faiss-cpu>=1.13.2",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pytorch-lightning>=2.6.0",
    "sentencepiece>=0.2.1",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "jupytext>=1.18.1",
    "pytest>=9.0.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
